決め打ちデータでメッシュ生成
頂点の補間ロジックを分離
データの生成ロジックを分離

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -2,4 +2,4 @@
 
 add_executable(segment Segment.cpp)
 target_include_directories(segment PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Include)
-target_link_libraries(segment PUBLIC g4 gmp mpfr)
+target_link_libraries(segment PUBLIC g4)
