--- a/Include/g4/generators/CMakeLists.txt
+++ b/Include/g4/generators/CMakeLists.txt
@@ -1,4 +1,11 @@
 target_sources(g4 PRIVATE
     g4_Generator.h
+    g4_IGeometryProvider.h
+    g4_IInterpolator.h
+    g4_IMeshBuffer.h
     g4_IMeshProvider.h
+    g4_IPointGenerator.h
+    g4_Types.h
 )
+
+add_subdirectory(detail)
