--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,5 +1,14 @@
 # find_package(GMP REQUIRED)
 
+add_executable(sphere Sphere.cpp)
+target_include_directories(sphere PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Include)
+target_include_directories(sphere PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Externals/Eigen)
+target_link_libraries(sphere PUBLIC g4)
+
 add_executable(segment Segment.cpp)
 target_include_directories(segment PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Include)
 target_link_libraries(segment PUBLIC g4)
+
+add_executable(tetrahedron Tetrahedron.cpp)
+target_include_directories(tetrahedron PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Include)
+target_link_libraries(tetrahedron PUBLIC g4)
