4 次元キューブのサンプルを追加

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,5 +1,10 @@
 # find_package(GMP REQUIRED)
 
+add_executable(cube_4d Cube4d.cpp)
+target_include_directories(cube_4d PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Include)
+target_include_directories(cube_4d PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Externals/Eigen)
+target_link_libraries(cube_4d PUBLIC g4)
+
 add_executable(sphere Sphere.cpp)
 target_include_directories(sphere PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Include)
 target_include_directories(sphere PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../Externals/Eigen)
