--- a/Sources/Libraries/g4/CMakeLists.txt
+++ b/Sources/Libraries/g4/CMakeLists.txt
@@ -2,5 +2,6 @@ target_sources(g4 PRIVATE
     g4_MeshGenerator.cpp
 )
 
+add_subdirectory(common)
 add_subdirectory(generators)
 add_subdirectory(util)
