.obj ファイルに出力する実装を共通化

--- a/Include/g4/CMakeLists.txt
+++ b/Include/g4/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(g4 PRIVATE g4.h)
 add_subdirectory(common)
+add_subdirectory(io)
 add_subdirectory(generators)
 add_subdirectory(util)
