--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,16 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Libraries)
 link_directories(${CMAKE_SOURCE_DIR}/Libraries)
 
 # gtest
-# SET(BUILD_GMOCK OFF CACHE BOOL "Use some expat option")
-# SET(INSTALL_GTEST OFF CACHE BOOL "Use some expat option")
-option(BUILD_GMOCK "" OFF)
-option(INSTALL_GTEST "" OFF)
-add_subdirectory(Externals/googletest)
+option(G4_IS_TEST_ENABLED "Enable test" OFF)
+
+if(G4_IS_TEST_EMABLED)
+    # SET(BUILD_GMOCK OFF CACHE BOOL "Use some expat option")
+    # SET(INSTALL_GTEST OFF CACHE BOOL "Use some expat option")
+    option(BUILD_GMOCK "" OFF)
+    option(INSTALL_GTEST "" OFF)
+    add_subdirectory(Externals/googletest)
+    add_subdirectory(Tests)
+endif()
 
 # add_definitions(-DCGAL_EIGEN3_ENABLED)
 add_library(g4 STATIC)
@@ -118,7 +123,6 @@ target_compile_features(g4 PUBLIC cxx_std_20)
 add_subdirectory(Examples)
 add_subdirectory(Include)
 add_subdirectory(Sources)
-add_subdirectory(Tests)
 
 get_target_property(G4_HEADERS g4 SOURCES)
 list(FILTER G4_HEADERS INCLUDE REGEX "[.]h$")
