--- a/Sources/Libraries/g4/CMakeLists.txt
+++ b/Sources/Libraries/g4/CMakeLists.txt
@@ -3,5 +3,6 @@ target_sources(g4 PRIVATE
 )
 
 add_subdirectory(common)
+add_subdirectory(ffi)
 add_subdirectory(generators)
 add_subdirectory(util)
