--- a/Sources/Libraries/g4/generators/CMakeLists.txt
+++ b/Sources/Libraries/g4/generators/CMakeLists.txt
@@ -1,3 +1,3 @@
-target_sources(g4 PRIVATE g4_DirectGenerator.cpp)
-
-add_subdirectory(detail)
+target_sources(g4 PRIVATE
+    g4_CgalSurfaceReconstructor.cpp
+    g4_DirectGenerator.cpp)
